--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
+serde_json = "1.0"
