--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 regex = "1"
-hyper = { version = "0.14", features = ["full"] }
+# hyper = { version = "0.14", features = ["full"] }
+hyper = { version = "0.14", features = ["full", "backports", "deprecated"] }
 tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 serde_json = "1.0"
+hyper-router = "0.5"
